--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=ESP32_Host_MIDI
-version= 2.0.0
+name=datahandler
+version= 1.0.0
 author=sauloverissimo
 maintainer=Saulo Verissimo <sauloverissimo@gmail.com>
-sentence=Arduino library to host MIDI messages on ESP32
-paragraph=Receive MIDI messages via USB-OTG or BLE on ESP32. Translate message types and display them. Tested on ESP32-S3, but compatible with other microcontrollers.
-category=Communication
-url=https://github.com/sauloverissimo/ESP32_Host_MIDI
+sentence=Arduino library for advanced data manipulation  
+paragraph=Library for handling variants, vectors, tables, and dataframes efficiently in Arduino projects, enabling structured data processing and transformation.
+category=Data Processing
+url=https://github.com/sauloverissimo/datahandler
 architectures=*
